--- a/index.html
+++ b/index.html
@@ -101,46 +101,47 @@
     <!-- packages section// -->
     <section id="our-menu">
       <h2>Available Packages</h2>
-
-      <div class="menu1">
-        <img src="image/single.jpg" alt="" srcset="" class="m-img" />
-        <div class="m-body">
-          <h3>Single Package</h3>
-          <ul>
-            <li>Visa Processing</li>
-            <li>Hotel Booking</li>
-            <li>Food & 24 Hr Service</li>
-            <li class="price">300$</li>
-          </ul>
-          <a href="#place">Book</a>
+      <div class="package">
+        <div class="menu1">
+          <img src="image/single.jpg" alt="" srcset="" class="m-img" />
+          <div class="m-body">
+            <h3>Single Package</h3>
+            <ul>
+              <li>Visa Processing</li>
+              <li>Hotel Booking</li>
+              <li>Food & 24 Hr Service</li>
+              <li class="price">300$</li>
+            </ul>
+            <a href="#place">Book</a>
+          </div>
         </div>
-      </div>
 
-      <div class="menu2">
-        <img src="image/couple.jpg" alt="" srcset="" class="m-img" />
-        <div class="m-body">
-          <h3>Couple Package</h3>
-          <ul>
-            <li>Visa Processing</li>
-            <li>Hotel Booking</li>
-            <li>Food & Vehicles</li>
-            <li class="price">500$</li>
-          </ul>
-          <a href="#place">Book</a>
+        <div class="menu2">
+          <img src="image/couple.jpg" alt="" srcset="" class="m-img" />
+          <div class="m-body">
+            <h3>Couple Package</h3>
+            <ul>
+              <li>Visa Processing</li>
+              <li>Hotel Booking</li>
+              <li>Food & Vehicles</li>
+              <li class="price">500$</li>
+            </ul>
+            <a href="#place">Book</a>
+          </div>
         </div>
-      </div>
 
-      <div class="menu3">
-        <img src="image/family.jpg" alt="" srcset="" class="m-img" />
-        <div class="m-body">
-          <h3>Family Package</h3>
-          <ul>
-            <li>Visa Processing</li>
-            <li>Hotel Booking</li>
-            <li>Food & Vehicles</li>
-            <li class="price">800$</li>
-          </ul>
-          <a href="#place">Book</a>
+        <div class="menu3">
+          <img src="image/family.jpg" alt="" srcset="" class="m-img" />
+          <div class="m-body">
+            <h3>Family Package</h3>
+            <ul>
+              <li>Visa Processing</li>
+              <li>Hotel Booking</li>
+              <li>Food & Vehicles</li>
+              <li class="price">800$</li>
+            </ul>
+            <a href="#place">Book</a>
+          </div>
         </div>
       </div>
     </section>
